# Snake

./: .gitignore  CMakeLists.txt  main.cpp
Game/: bot.cpp  bot.hpp  game.cpp  game.hpp  human.cpp  human.hpp  model.cpp  model.hpp  view.cpp  view.hpp
Gview/: gview.cpp  gview.hpp
Tview/: tview.cpp  tview.hpp
